# ma5king

./: CMakeLists.txt  FileList.txt  license.txt  readme.txt
docs/tutorial/: MainDlg.cpp  MainDlg.h  anaclock.cpp  anaclock.h  tutorial.cpp
examples/: allegro.cfg  ex02.cpp  ex05.cpp  ex09.cpp
examples/skins/: Piper.ini  template.ini
examples/skins/mouse_3D/: mouse_3D.ini
include/: MASkinG.h
include/MASkinG/: accelerator.h  animator.h  bitmap.h  button.h  checkbox.h  clearscreen.h  clipboard.h  color.h  colorsel.h  combobox.h  compound.h  cursor.h  debug.h  defines.h  dialog.h  editbox.h  error.h  fileselect.h  font.h  global.h  groupbox.h  hypertext.h  image.h  label.h  listbox.h  listboxex.h  maskingdll.h  menu.h  messagebox.h  mouse.h  panel.h  point.h  progress.h  radiobutton.h  rect.h  sample.h  scrollbox.h  scroller.h  scrollobj.h  separator.h  (+14 more)
src/: accelerator.cpp  animator.cpp  bitmap.cpp  button.cpp  checkbox.cpp  clearscreen.cpp  clipboard.cpp  color.cpp  colorsel.cpp  combobox.cpp  cursor.cpp  dialog.cpp  editbox.cpp  error.cpp  fileselect.cpp  font.cpp  groupbox.cpp  hypertext.cpp  image.cpp  label.cpp  listbox.cpp  listboxex.cpp  masking.cpp  menu.cpp  messagebox.cpp  mouse.cpp  panel.cpp  point.cpp  progress.cpp  radiobutton.cpp  rect.cpp  sample.cpp  scrollbox.cpp  scroller.cpp  scrollobj.cpp  separator.cpp  settings.cpp  shortcut.cpp  size.cpp  skin.cpp  (+10 more)
